# kraken

./: .gitignore  CMakeLists.txt  build.bat  build.sh  compr_entropy.cpp  compr_entropy.h  compr_kraken.cpp  compr_leviathan.cpp  compr_leviathan.h  compr_match_finder.cpp  compr_multiarray.cpp  compr_tans.cpp  compr_util.h  compress.cpp  compress.h  generate.rsp  kraken.cpp  kraken.h  main.cpp  oodle.kark
.github/workflows/: cmake-multi-platform.yml
